test/scc/expr/semantic-errors/149.t
void test()
{
    union
    {
        int a, b;
    } c = { .a = 0, 1 };
}